Added a margin to bottom of page

--- a/Styling/homepage.css
+++ b/Styling/homepage.css
@@ -78,9 +78,10 @@ ul {
 }
 
 .wideDiv {
-    padding: 4%;
+    padding: min(4vw, 4vh);
     border: min(.4vw, .4vh) solid var(--three);
     font-size: min(2.8vh, 2.5vw);
+    margin-bottom: 5%;
 
     position: absolute;
     left: var(--bodyPadding);
