Trying a body mod

--- a/Styling/homepage.css
+++ b/Styling/homepage.css
@@ -10,6 +10,7 @@
 }
  
 body{
+    padding-bottom: 5%;
     padding: var(--bodyPadding);
     margin: 0; 
     background-color: var(--one);
@@ -81,7 +82,6 @@ ul {
     padding: min(4vw, 4vh);
     border: min(.4vw, .4vh) solid var(--three);
     font-size: min(2.8vh, 2.5vw);
-    margin-bottom: 20px;
 
     position: absolute;
     left: var(--bodyPadding);
