--- a/Styling/homepage.css
+++ b/Styling/homepage.css
@@ -10,8 +10,7 @@
 }
  
 body{
-    padding-bottom: 5%;
-    padding: var(--bodyPadding);
+    padding: var(--bodyPadding), var(--bodyPadding), 5%, var(--bodyPadding);
     margin: 0; 
     background-color: var(--one);
 }
