--- a/Styling/homepage.css
+++ b/Styling/homepage.css
@@ -10,7 +10,7 @@
 }
  
 body{
-    padding: var(--bodyPadding), var(--bodyPadding), 200px, var(--bodyPadding);
+    padding: var(--bodyPadding);
     margin: 0; 
     background-color: var(--one);
 }
