--- a/Styling/homepage.css
+++ b/Styling/homepage.css
@@ -17,6 +17,52 @@ body{
     padding-bottom: 15vh;
 }
 
+#navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 6vh;
+    display: table;
+
+    background-color: var(--one);
+    z-index: 2;
+}
+
+.navbarRow {
+    width: 100vw;
+    display: table-row;
+}
+
+.navbarCell {
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+
+    font-size: min(2.5vh, 2.5vw);
+    line-height: min(2.25vh, 2.25vw);
+
+    padding-left: 8vw;
+    padding-right: 8vw;
+}
+
+.navbarCell a {
+    color: inherit;
+    text-decoration: none;
+    line-height: min(2.5vh, 2.5vw);
+}
+
+.linkCircle{
+    width: 34vw;
+    height: 3vh;
+
+    background-color: var(--three);
+
+    line-height: min(2.5vh, 2.5vw);
+
+    border-radius: 2vw;
+}
+
 #pageTitle {
     position: absolute;
 
@@ -87,9 +133,16 @@ ul {
     position: absolute;
     left: var(--bodyPadding);
     right: var(--bodyPadding);
-    top: min(70vh, 70.25vw);
 
     margin-bottom: 10vh;
+}
+
+#Experiences {
+    top: min(70vh, 70.25vw);
+}
+
+#SprintOne {
+    top: min(125vh, 125vw);
 }
 
 .eyecatching {
@@ -97,10 +150,15 @@ ul {
     color: var(--one);
 }
 
-#whitespace { 
+.commonColoring {
+    background-color: var(--two);
+    color: var(--five);
+}
+
+#whitespace {
     height: 10vh;
     position: absolute;
     left: var(--bodyPadding);
     right: var(--bodyPadding);
-    top: min(120vh, 120.25vw);
+    top: min(195vh, 195.25vw);
 }
